syntax = "proto3";

package neuromance.v1;

// The Neuromance daemon service.
service Neuromance {
  // Bidirectional streaming RPC for chat with tool approval.
  rpc Chat(stream ChatClientMessage) returns (stream ChatEvent);

  // Create a new conversation.
  rpc NewConversation(NewConversationRequest) returns (NewConversationResponse);

  // List messages from a conversation.
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);

  // List all conversations.
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);

  // Set a bookmark for a conversation.
  rpc SetBookmark(SetBookmarkRequest) returns (SetBookmarkResponse);

  // Remove a bookmark.
  rpc RemoveBookmark(RemoveBookmarkRequest) returns (RemoveBookmarkResponse);

  // Delete a conversation.
  rpc DeleteConversation(DeleteConversationRequest) returns (DeleteConversationResponse);

  // Switch the model for a conversation.
  rpc SwitchModel(SwitchModelRequest) returns (SwitchModelResponse);

  // List available model profiles.
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse);

  // Get basic daemon status.
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);

  // Get detailed status including current conversation.
  rpc GetDetailedStatus(GetDetailedStatusRequest) returns (GetDetailedStatusResponse);

  // Health check with version compatibility.
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // Request graceful daemon shutdown.
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

// --- Chat bidirectional stream messages ---

// Client-to-server messages in a Chat stream.
message ChatClientMessage {
  oneof message {
    SendMessageRequest send_message = 1;
    ToolApprovalResponse tool_approval = 2;
  }
}

// Initial message to start a chat exchange.
message SendMessageRequest {
  // Conversation ID (empty string for active conversation).
  string conversation_id = 1;
  // The message content.
  string content = 2;
}

// Client response to a tool approval request.
message ToolApprovalResponse {
  // The conversation ID.
  string conversation_id = 1;
  // The tool call ID being approved/denied.
  string tool_call_id = 2;
  // The approval decision.
  ToolApprovalDecision approval = 3;
}

// Tool approval decision from the user.
message ToolApprovalDecision {
  oneof decision {
    bool approved = 1;
    string denied_reason = 2;
    bool quit = 3;
  }
}

// Server-to-client events in a Chat stream.
message ChatEvent {
  // The conversation this event belongs to.
  string conversation_id = 7;

  oneof event {
    StreamChunk stream_chunk = 1;
    ToolApprovalRequestProto tool_approval_request = 2;
    ToolResultProto tool_result = 3;
    UsageProto usage = 4;
    MessageCompleted message_completed = 5;
    ChatError error = 6;
  }
}

// A chunk of streaming content.
message StreamChunk {
  string content = 2;
}

// Request for user approval of a tool call.
message ToolApprovalRequestProto {
  ToolCallProto tool_call = 2;
}

// Result of a tool execution.
message ToolResultProto {
  string tool_name = 2;
  string result = 3;
  bool success = 4;
}

// Token usage statistics.
message UsageProto {
  uint32 prompt_tokens = 2;
  uint32 completion_tokens = 3;
  uint32 total_tokens = 4;
  optional double cost = 5;
  optional InputTokensDetailsProto input_tokens_details = 6;
  optional OutputTokensDetailsProto output_tokens_details = 7;
}

message InputTokensDetailsProto {
  uint32 cached_tokens = 1;
  uint32 cache_creation_tokens = 2;
}

message OutputTokensDetailsProto {
  uint32 reasoning_tokens = 1;
}

// Indicates a message exchange is complete.
message MessageCompleted {
  MessageProto message = 2;
}

// Mid-stream error (distinct from gRPC status).
message ChatError {
  ErrorCode code = 1;
  string message = 2;
}

// --- Domain types ---

// A chat message.
message MessageProto {
  string id = 1;
  string conversation_id = 2;
  MessageRole role = 3;
  string content = 4;
  // Metadata as JSON-encoded key-value pairs.
  map<string, string> metadata = 5;
  string timestamp = 6;
  repeated ToolCallProto tool_calls = 7;
  optional string tool_call_id = 8;
  optional string name = 9;
  optional ReasoningContentProto reasoning = 10;
}

enum MessageRole {
  MESSAGE_ROLE_UNSPECIFIED = 0;
  MESSAGE_ROLE_SYSTEM = 1;
  MESSAGE_ROLE_USER = 2;
  MESSAGE_ROLE_ASSISTANT = 3;
  MESSAGE_ROLE_TOOL = 4;
}

message ReasoningContentProto {
  string content = 1;
  optional string signature = 2;
}

// A tool call within a message.
message ToolCallProto {
  string id = 1;
  FunctionCallProto function = 2;
  string call_type = 3;
}

// A function call (name + arguments).
message FunctionCallProto {
  string name = 1;
  repeated string arguments = 2;
}

// Conversation summary for listings.
message ConversationSummaryProto {
  string id = 1;
  string short_id = 2;
  optional string title = 3;
  uint64 message_count = 4;
  string created_at = 5;
  string updated_at = 6;
  repeated string bookmarks = 7;
  string model = 8;
}

// Model profile for listings.
message ModelProfileProto {
  string nickname = 1;
  string provider = 2;
  string model = 3;
  string api_key_env = 4;
  optional string base_url = 5;
}

// Machine-readable error codes.
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_CONVERSATION_NOT_FOUND = 1;
  ERROR_CODE_MODEL_NOT_FOUND = 2;
  ERROR_CODE_BOOKMARK_NOT_FOUND = 3;
  ERROR_CODE_BOOKMARK_EXISTS = 4;
  ERROR_CODE_NO_ACTIVE_CONVERSATION = 5;
  ERROR_CODE_INVALID_CONVERSATION_ID = 6;
  ERROR_CODE_LLM_ERROR = 7;
  ERROR_CODE_CONFIG_ERROR = 8;
  ERROR_CODE_STORAGE_ERROR = 9;
  ERROR_CODE_INVALID_REQUEST = 10;
  ERROR_CODE_INTERNAL = 11;
}

// --- Unary RPC messages ---

message NewConversationRequest {
  optional string model = 1;
  optional string system_message = 2;
}

message NewConversationResponse {
  ConversationSummaryProto conversation = 1;
}

message ListMessagesRequest {
  string conversation_id = 1;
  optional uint64 limit = 2;
}

message ListMessagesResponse {
  string conversation_id = 1;
  repeated MessageProto messages = 2;
  uint64 total_count = 3;
}

message ListConversationsRequest {
  optional uint64 limit = 1;
}

message ListConversationsResponse {
  repeated ConversationSummaryProto conversations = 1;
}

message SetBookmarkRequest {
  string conversation_id = 1;
  string name = 2;
}

message SetBookmarkResponse {
  string message = 1;
}

message RemoveBookmarkRequest {
  string name = 1;
}

message RemoveBookmarkResponse {
  string message = 1;
}

message DeleteConversationRequest {
  string conversation_id = 1;
}

message DeleteConversationResponse {
  string message = 1;
}

message SwitchModelRequest {
  string conversation_id = 1;
  string model_nickname = 2;
}

message SwitchModelResponse {
  ConversationSummaryProto conversation = 1;
}

message ListModelsRequest {}

message ListModelsResponse {
  repeated ModelProfileProto models = 1;
  string active = 2;
}

message GetStatusRequest {}

message GetStatusResponse {
  uint64 uptime_seconds = 1;
  uint64 active_conversations = 2;
}

message GetDetailedStatusRequest {}

message GetDetailedStatusResponse {
  uint64 uptime_seconds = 1;
  uint64 active_conversations = 2;
  optional ConversationSummaryProto current_conversation = 3;
}

message HealthCheckRequest {
  string client_version = 1;
}

message HealthCheckResponse {
  string daemon_version = 1;
  bool compatible = 2;
  optional string warning = 3;
  uint64 uptime_seconds = 4;
}

message ShutdownRequest {}

message ShutdownResponse {
  string message = 1;
}
